Cambios de la clase
